June 16, 2023: version 4.0.4

    * cmake build system updates: update by Markus Muetzel

Jan 17, 2022: version 4.0.3

    * NFORTRAN: option added to disable Fortran entirely
    * SuiteSparse_config: now v7.0.0

Dec 9, 2022: version 4.0.2

    * minor change to build system
    * Fortran: no longer required to build CHOLMOD
    * NPARTITION: if CHOLMOD is compiled with -DNPARTION, then
        METIS is not compiled.  However, the CHOLMOD interface to METIS is
        still present; they simply return CHOLMOD_NOT_INSTALLED.  This
        allows methods that depend on CHOLMOD's METIS interface to use
        a run-time test, instead of requiring them to be compiled with
        -DNPARTITION (SPQR in particular).

Nov 12, 2022: version 4.0.1

    * BLAS definitions: no longer exposed to the user application

Nov 12, 2022: version 4.0.0

    * using CMake build system
    * integers: int (32-bit) and SuiteSparse_long (nominally 64-bit) replaced
        with int32_t and int64_t.
    * cholmod.h: single include file for all Modules
    * BLAS/LAPACK: relying on SuiteSparse_config and CMake to find and link
        with the BLAS and LAPACK libraries
    * libcholmod_cuda.so: CUDA support split into a separate library.
    * OpenMP: CHOLMOD_OMP_NUM_THREADS removed, replaced with run time
        controls (Common->nthreads_max, Common->chunk)
    * METIS: no longer built as a separate libary.  A slightly modified version
        of METIS is embedded into the CHOLMOD library, with a prefix appended
        to each function name so it won't conflict with a standard METIS
        library that may already exist in the application.

June 30, 2020: no change to version number

    * minor update to MATLAB tests: no change to compiled library,
        so version number remains 3.0.14.
    * replaced UFget with ssget in MATLAB tests

Feb 20, 2020: version 3.0.14

    * minor update to cholmod_check to print a matrix

Dec 20, 2018: version 3.0.13
