@@ -88,13 +88,16 @@ GK_MKALLOC_PROTO(gk_idxkv, gk_idxkv_t)
 
 void   gk_AllocMatrix(void ***, size_t, size_t , size_t);
 void   gk_FreeMatrix(void ***, size_t, size_t);
-int    gk_malloc_init();
+// int    gk_malloc_init();
+   int    gk_malloc_init(void);
 void   gk_malloc_cleanup(int showstats);
 void  *gk_malloc(size_t nbytes, char *msg);
 void  *gk_realloc(void *oldptr, size_t nbytes, char *msg);
 void   gk_free(void **ptr1,...);
-size_t gk_GetCurMemoryUsed();
-size_t gk_GetMaxMemoryUsed();
+// size_t gk_GetCurMemoryUsed();
+   size_t gk_GetCurMemoryUsed(void);
+// size_t gk_GetMaxMemoryUsed();
+   size_t gk_GetMaxMemoryUsed(void);
 
 
 
@@ -126,14 +129,21 @@ void gk_showcorruption(pdbf *p);
 void gk_set_exit_on_error(int value);
 void errexit(char *,...);
 void gk_errexit(int signum, char *,...);
-int gk_sigtrap();
-int gk_siguntrap();
+// int gk_sigtrap();
+   int gk_sigtrap(void);
+// int gk_siguntrap();
+   int gk_siguntrap(void);
 void gk_sigthrow(int signum);
-void gk_SetSignalHandlers();
-void gk_UnsetSignalHandlers();
+// void gk_SetSignalHandlers();
+   void gk_SetSignalHandlers(void);
+// void gk_SetSignalHandlers();
+   void gk_SetSignalHandlers(void);
+// void gk_UnsetSignalHandlers();
+   void gk_UnsetSignalHandlers(void);
 void gk_NonLocalExit_Handler(int signum);
 char *gk_strerror(int errnum);
-void PrintBackTrace();
+// void PrintBackTrace();
+   void PrintBackTrace(void);
 
 
 /*-------------------------------------------------------------
@@ -288,7 +298,8 @@ int omp_get_nested(void);
 /*-------------------------------------------------------------
  * CSR-related functions
  *-------------------------------------------------------------*/
-gk_csr_t *gk_csr_Create();
+// gk_csr_t *gk_csr_Create();
+   gk_csr_t *gk_csr_Create(void);
 void gk_csr_Init(gk_csr_t *mat);
 void gk_csr_Free(gk_csr_t **mat);
 void gk_csr_FreeContents(gk_csr_t *mat);
@@ -335,7 +346,8 @@ float ComputeStdDev(int  n, float *values);
 
 /* mcore.c */
 gk_mcore_t *gk_mcoreCreate(size_t coresize);
-gk_mcore_t *gk_gkmcoreCreate();
+// gk_mcore_t *gk_gkmcoreCreate();
+   gk_mcore_t *gk_gkmcoreCreate(void);
 void gk_mcoreDestroy(gk_mcore_t **r_mcore, int showstats);
 void gk_gkmcoreDestroy(gk_mcore_t **r_mcore, int showstats);
 void *gk_mcoreMalloc(gk_mcore_t *mcore, size_t nbytes);
@@ -352,6 +364,7 @@ void gk_gkmcoreDel(gk_mcore_t *mcore, void *ptr);
 int gk_rw_PageRank(gk_csr_t *mat, float lamda, float eps, int max_niter, float *pr);
 
 
+#if 0
 /* graph.c */
 gk_graph_t *gk_graph_Create();
 void gk_graph_Init(gk_graph_t *graph);
@@ -371,7 +384,7 @@ void gk_graph_ComputeBestFOrdering0(gk_graph_t *graph, int v, int type,
 void gk_graph_ComputeBestFOrdering(gk_graph_t *graph, int v, int type,
               int32_t **r_perm, int32_t **r_iperm);
 void gk_graph_SingleSourceShortestPaths(gk_graph_t *graph, int v, void **r_sps);
-
+#endif
 
 
 
